--- a/PID_project22/PID_project22.ioc
+++ b/PID_project22/PID_project22.ioc
@@ -20,8 +20,9 @@ Mcu.IP4=TIM1
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
 Mcu.IP7=TIM5
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP8=TIM9
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -41,6 +42,7 @@ Mcu.Pin20=PB3
 Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin23=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
@@ -48,7 +50,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -64,6 +66,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -156,7 +159,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM5_Init-TIM5-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM5_Init-TIM5-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM9_Init-TIM9-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -220,6 +223,9 @@ TIM3.IPParameters=Period,EncoderMode
 TIM3.Period=3071
 TIM5.IPParameters=Prescaler
 TIM5.Prescaler=83
+TIM9.IPParameters=Prescaler,Period
+TIM9.Period=1000-1
+TIM9.Prescaler=9
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -228,6 +234,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
